crates/parser/tests/cases/snapshots/cases__parse_ast__type_unit.snap
---
source: parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(type_unit), types::parse_type_desc, \"()\")"

---
Node(
  kind: Unit,
  span: Span(
    start: 0,
    end: 2,
  ),
)
